frontend/src/styles.scss
/* ... */
.mobile-menu span::after {
  top: 5px;
  width: 70%;
}

.mobile-menu.on span::after,
.mobile-menu.on span::before {
  height: 2px;
  width: 100%;
}

.mobile-menu.on span::before {
  transform: rotate(45deg) translate(4px, 4px);
}

.mobile-menu.on span::after {
  transform: rotate(-45deg) translate(3px, -3px);
}

.icon-scissors::before {
  content: "\e8bf";
}

.icon-home::before {
  content: "\e87a";
}

.icon-schedule::before {
  content: "\e837";
}

.icon-users::before {
  content: "\e8ea";
}

.pcoded-navbar .pcoded-inner-navbar li>a .pcoded-mtext {
  position: relative;
}

.pcoded-navbar .pcoded-inner-navbar li>a>.pcoded-micon+.pcoded-mtext {
  position: absolute;
  top: 11px;
}

.sidebar-not-fixed.sidebar-not-fixed .pcoded-inner-navbar app-sidebar-item>li>a>.pcoded-mtext,
.sidebar-not-fixed.sidebar-not-fixed .pcoded-inner-navbar>app-sidebar-group>app-sidebar-collapse>li>a>.pcoded-mtext {
  transform: rotateY(-90deg);
  transform-origin: 0 0;
  opacity: 0;
  transition: all .3s ease-in-out;
}

.sidebar-not-fixed .sidebar:hover .pcoded-inner-navbar app-sidebar-item>li>a>.pcoded-mtext,
.sidebar-not-fixed .sidebar:hover .pcoded-inner-navbar>app-sidebar-group>app-sidebar-collapse>li>a>.pcoded-mtext {
  transform: rotateY(0);
  opacity: 1;
}

.sidebar-not-fixed.sidebar-not-fixed .pcoded-navbar .header-logo.navbar-brand {
  width: var(--bs-sidebar-collapsed-width);
}

.sidebar-not-fixed.sidebar-not-fixed .sidebar:hover .pcoded-navbar .header-logo.navbar-brand {
  width: var(--bs-sidebar-width);
}

.sidebar-not-fixed .sidebar:not(:hover) .b-brand .b-title,
.sidebar-not-fixed .sidebar:not(:hover) .mobile-menu {
  transform: rotateY(-90deg);
  transform-origin: 0 0;
  opacity: 0;
}

.sidebar-not-fixed .pcoded-menu-caption::after {
  content: "";
  position: absolute;
  top: 25px;
  left: 15px;
  width: calc(100% - 30px);
  height: 1px;
  background: #0000001a;
}

.sidebar-not-fixed .sidebar:hover .pcoded-menu-caption::after {
  background: transparent;
}

.sidebar-not-fixed .pcoded-menu-caption>label {
  transform: rotateY(-90deg);
  transform-origin: 0 0;
  opacity: 0;
  transition: all .3s ease-in-out;
}

.sidebar-not-fixed .sidebar:hover .pcoded-menu-caption>label {
  transform: rotateY(0);
  opacity: 1;
}

.sidebar-not-fixed .sidebar:not(:hover) .pcoded-inner-navbar app-sidebar-item>li>a,
.sidebar-not-fixed .sidebar:not(:hover) .pcoded-inner-navbar>app-sidebar-group>app-sidebar-collapse>li>a {
  width: var(--bs-sidebar-collapsed-width);
}

.sidebar-not-fixed .sidebar:hover .pcoded-inner-navbar app-sidebar-item>li>a>.pcoded-mtext::after,
.sidebar-not-fixed .sidebar:hover .pcoded-inner-navbar>app-sidebar-group>app-sidebar-collapse>li>a>.pcoded-mtext::after {
  opacity: 1;
  visibility: visible;
}

.navbar {
  --bs-navbar-padding-x: 0;
  --bs-navbar-padding-y: .5rem;
  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), .65);
  --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), .8);
  --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), .3);
  --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
  --bs-navbar-brand-padding-y: .3125rem;
  --bs-navbar-brand-margin-end: 1rem;
  --bs-navbar-brand-font-size: 1.25rem;
  --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
  --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
  --bs-navbar-nav-link-padding-x: .5rem;
  --bs-navbar-toggler-padding-y: .25rem;
  --bs-navbar-toggler-padding-x: .75rem;
  --bs-navbar-toggler-font-size: 1.25rem;
  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2833, 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), .15);
  --bs-navbar-toggler-border-radius: var(--bs-border-radius);
  --bs-navbar-toggler-focus-width: .25rem;
  --bs-navbar-toggler-transition: box-shadow .15s ease-in-out;
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
}

.navbar-brand {
  padding-top: var(--bs-navbar-brand-padding-y);
  padding-bottom: var(--bs-navbar-brand-padding-y);
  margin-right: var(--bs-navbar-brand-margin-end);
  font-size: var(--bs-navbar-brand-font-size);
  color: var(--bs-navbar-brand-color);
  text-decoration: none;
  white-space: nowrap;
}

.navbar-brand {
  background: #3f4d67;
}

.pcoded-navbar .header-logo {
  position: relative;
  align-items: center;
  display: inline-flex;
  float: left;
  height: 70px;
  text-align: center;
  width: var(--bs-sidebar-width);
  margin-right: 0;
  padding: 10px 20px;
  //transition: all .3s ease-in-out;
}

.pcoded-navbar .header-logo+.scroll-div {
  float: left;
  display: inline-block;
}

.pcoded-header {
  z-index: 1028;
  display: flex;
  min-height: var(--bs-header-minheight);
  padding: 0;
  position: relative;
  top: 0;
  background: transparent;
  color: #3f4d67;
  width: calc(100% - var(--bs-sidebar-width));
  margin-left: var(--bs-sidebar-width);
  transition: all .3s ease-in-out;
}

.sidebar-not-fixed .pcoded-header,
.sidebar-not-fixed .pcoded-main-container {
  margin-left: var(--bs-sidebar-collapsed-width);
}

.sidebar-not-fixed .pcoded-header {
  width: calc(100% - var(--bs-sidebar-collapsed-width));
}

.pcoded-header::before,
.pcoded-main-container::before {
  content: "";
  transition: all .3s ease-in-out;
}

.navbar-nav {
  --bs-nav-link-padding-x: 0;
  --bs-nav-link-padding-y: .5rem;
  --bs-nav-link-font-weight: ;
  --bs-nav-link-color: var(--bs-navbar-color);
  --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
  --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
  display: flex;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;
}
/* ... */

